Bug 420290 - Setting dataset chart type is not undoable
Summary: Setting dataset chart type is not undoable
Status: RESOLVED FIXED
Alias: None
Product: calligrachart
Classification: Applications
Component: usability (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Inge Wallin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-19 06:16 UTC by Dag Andersen
Modified: 2020-04-21 06:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.90
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dag Andersen 2020-04-19 06:16:54 UTC
SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Dag Andersen 2020-04-21 06:29:42 UTC
Git commit 5ff27d98077b3ee49db93ac851c3c349cae38fea by Dag Andersen.
Committed on 19/04/2020 at 06:26.
Pushed by danders into branch 'master'.

Fix Bug 420290 - Setting dataset chart type is not undoable
FIXED-IN: 3.1.90

M  +9    -15   plugins/chartshape/ChartTool.cpp
M  +1    -2    plugins/chartshape/ChartTool.h
M  +6    -4    plugins/chartshape/DataSetConfigWidget.cpp
M  +1    -2    plugins/chartshape/DataSetConfigWidget.h
M  +14   -2    plugins/chartshape/commands/DatasetCommand.cpp

https://commits.kde.org/calligra/5ff27d98077b3ee49db93ac851c3c349cae38fea