Fix Bug 420290 - Setting dataset chart type is not undoable

BUG: 420290
FIXED-IN: 3.1.90